
syntax = "proto3";
package Cocopops.Protobuf.Model;
option csharp_namespace = "Cocopops.Protobuf.Model.BaseTransaction";

message BaseTransaction {
	string transaction_reference_number = 1;
	string executing_entity_code = 2;
}
