
syntax = "proto3";
package Cocopops.Protobuf.Model;
option csharp_namespace = "Cocopops.Protobuf.Model.ExtendedTransaction";

import "BaseTransaction.proto";

message ExtendedTransaction {
	Cocopops.Protobuf.Model.BaseTransaction base_transaction = 1;
	string comments = 2;
	string extra = 3;
}
